# Assignment_3

./: .env  README.md  output.md  pyproject.toml
src/assignment_3/: __init__.py  my_first_agent.py
