[project]
name = "assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Unazabutt", email = "unazabutt44@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
assignment-3 = "assignment_3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
